[2.1.4] Galicia API: bank account sync mechanism